--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,7 @@ header{
     font-size: 16px;
     padding: 1% 5%;
     border: 1px solid black;
+    background-color: white;
 }
 button:hover{
 	animation: color-change 3s infinite;
@@ -270,5 +271,53 @@ footer{
 }
 
 /****** Mobile View Styling ******/
+
+@media screen and (max-width: 500px){
+    body{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .navbar{
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    .navbar nav{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border-top: 1px solid lightgray;
+    }
+    .navbar a{
+        border-bottom: 1px solid lightgray;
+        padding: 2%;
+        text-align: center;
+    }
+    .navbar img{
+        width: 30%;
+    }
+    .content{
+        margin: auto 5%;
+    }
+    .box-one{
+        display: flex;
+        flex-direction: column;
+        margin: 5% auto;
+    }
+    .one{
+        width: 100%;
+    }
+    .box-two{
+        display: flex;
+        flex-direction: column;
+    }
+    .two{
+        width: 100%;
+    }
+    .contact{
+        margin: auto 5%;
+    }
+}
 
 
