--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ header{
 	margin: 2% 0;
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 .main-header div{
@@ -65,7 +65,7 @@ header{
 
 }
 .main-header h1{
-	font-size: 70px;
+	font-size: 5em;
 }
 .main-header button{	
     font-size: 16px;
@@ -296,14 +296,20 @@ footer{
     }
     .navbar img{
         width: 30%;
-    }
+	}
+	.main-header h1{
+		font-size: 3em;
+	}
+	.main-header{
+		margin: 15% 0;
+	}
     .content{
         margin: auto 5%;
     }
     .box-one{
         display: flex;
         flex-direction: column;
-        margin: 5% auto;
+        margin: 10% auto;
     }
     .one{
         width: 100%;
